name:                pivotal-stats
version:             0.1.0.0
synopsis:            Tools for reading Pivotal Tracker status

description:
  A library to assist in reading Pivotal Tracker status

license:             MIT
license-file:        LICENSE
author:              Justin Leitgeb
copyright:           (c) 2013 Justin Leitgeb
maintainer:          justin@stackbuilders.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable pivotal-stats
  build-depends:         base >=4.6 && <4.7
                       , aeson
                       , http-conduit
                       , text
  main-is:             Main.hs
  default-language:    Haskell2010